[tool.poetry]
name = "w03-duckdb-dbt"
version = "0.1.0"
description = ""
authors = ["oliveiraphm <oliveiraphm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.6.0"
mkdocs = "^1.5.3"
duckdb = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
